Fixes z-index battle

--- a/src/styles/_b-input-search.scss
+++ b/src/styles/_b-input-search.scss
@@ -107,7 +107,7 @@
     overflow: auto;
     padding: 0;
     list-style-type: none;
-    z-index: 2;
+    z-index: 10;
   }
   &__suggestion {
     cursor: pointer;
